# claude-trucking-tms

./: .gitignore  4a5c36df9be4_add_shippers_receivers_and_mc_field.py  AWS_DEPLOYMENT_GUIDE.md  AWS_FREE_TIER_DEPLOYMENT.md  BACKEND_DEPLOYMENT_NEEDED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_GUIDE.md  DEPLOY_BACKEND.md  FRONTEND_API_INTEGRATION.md  GITHUB_NETLIFY_DEPLOYMENT.md  GITHUB_SETUP.md  INFRASTRUCTURE.md  LICENSE  LOCAL_DEV.md  Makefile  PDF_UPLOAD_FIX.md  PUBLISH_TO_GITHUB.md  QUICK_DEPLOY.md  QUICK_START.md  REACT_ERRORS_FIX.md  REACT_INFINITE_LOOP_FIX.md  README.md  README_DEPLOY.md  SHIPPERS_RECEIVERS_DEPLOYMENT.md  SIMPLE_DEPLOYMENT_GUIDE.md  SIMPLE_FIX.md  TWILIO_FILES_CREATED.md  TWILIO_QUICK_START.md  TWILIO_SETUP.md  add_missing_columns.sql  deploy-backend-simple.sh  deploy-remaining.sh  deploy-with-logs.sh  deploy.sh  docker-compose.yml  enable-postgis.sh  enable_postgis_simple.py  fix-db-and-migrate.sh  full-db-reset.py  (+6 more)
backend/: .env.example  001_add_truck_type.py  Dockerfile  Dockerfile.prod  PAYROLL_DEPLOYMENT.md  add_carrier_rate_and_notes.sql  add_mc_field.py  add_shippers_receivers_mc.sql  alembic.ini  check-db-state.py  cleanup_old_statuses.py  clear_all_pdfs.py  clear_pdfs_simple.py  complete_migration.sql  create_demo_users.py  create_expenses_table.sql  create_fuel_table.sql  create_tables.py  docker-compose.yml  entrypoint.sh  migrate.py  migrate_pdf_urls.py  migrate_pdf_urls.sql  migration.sql  pyproject.toml  remove_unique_constraint.py  requirements.txt  run-migration-sql.py  run_carrier_rate_migration.py  (+5 more)
(+180 files in other folders)
