[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-trucking-tms"
version = "0.1.0"
description = "Claude Trucking TMS - Transportation Management System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "boto3>=1.34.10",
    "geoalchemy2>=0.14.2",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.25.2",
    "email-validator>=2.3.0",
    "twilio>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "isort>=5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true